--- a/src/components/character/character/character.css
+++ b/src/components/character/character/character.css
@@ -83,5 +83,14 @@
 
   .resource-list {
     overflow-y: auto;
+
+    h2 {
+      margin-top: 1rem;
+      margin-bottom: 0.2rem;
+
+      &:first-child {
+        margin-top: 0;
+      }
+    }
   }
 }
