--- a/src/components/character/character/character.css
+++ b/src/components/character/character/character.css
@@ -82,8 +82,6 @@
   }
 
   .resource-list {
-    overflow-y: auto;
-
     h2 {
       margin-top: 1rem;
       margin-bottom: 0.2rem;
@@ -92,5 +90,9 @@
         margin-top: 0;
       }
     }
+  }
+
+  .new-ressource-component {
+    margin-top: 0.5rem;
   }
 }
