implement character import and export

--- a/src/components/settings/settings-controller/settings-controller.css
+++ b/src/components/settings/settings-controller/settings-controller.css
@@ -8,6 +8,18 @@
     border-collapse: collapse;
   }
 
+  .setting-import-export {
+    display: flex;
+
+    .spacer {
+      flex-grow: 1;
+    }
+
+    button {
+      width: 7rem;
+    }
+  }
+
   .setting-bool {
     label {
       margin-left: 1rem;
