--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,9 @@ button {
     -webkit-appearance: none;
   }
 }
+
+fieldset {
+  border: 4px solid rgba(0, 0, 0, 0.2);
+  border-radius: 8px;
+  border-collapse: collapse;
+}
