--- a/src/components/ui/tab-manager/tab-manager.css
+++ b/src/components/ui/tab-manager/tab-manager.css
@@ -46,6 +46,8 @@
   }
 
   .tab-content {
+    width: calc(100vw - 2 * 1rem);
+    padding: 0 1rem;
     position: absolute;
     transition: ease-in 0.3s;
   }
