--- a/src/components/ui/img-button/img-button.css
+++ b/src/components/ui/img-button/img-button.css
@@ -7,6 +7,7 @@
     max-width: 100%;
     max-height: 100%;
 
+    /* Clac Filter: https://codepen.io/sosuke/pen/Pjoqqp */
     filter: invert(100%) sepia(2%) saturate(7%) hue-rotate(337deg)
       brightness(101%) contrast(101%);
 
