--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,22 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* Clac Filter: https://codepen.io/sosuke/pen/Pjoqqp */
+  --svg-white: invert(100%) sepia(2%) saturate(7%) hue-rotate(337deg)
+    brightness(101%) contrast(101%);
+  --svg-red: invert(14%) sepia(74%) saturate(6873%) hue-rotate(358deg)
+    brightness(101%) contrast(117%);
+  --svg-darkred: invert(10%) sepia(79%) saturate(5099%) hue-rotate(357deg)
+    brightness(81%) contrast(112%);
+  --svg-gray: invert(54%) sepia(0%) saturate(84%) hue-rotate(191deg)
+    brightness(93%) contrast(88%);
+  --svg-ligthgray: invert(99%) sepia(0%) saturate(5897%) hue-rotate(49deg)
+    brightness(124%) contrast(65%);
+  --svg-dimgray: invert(43%) sepia(14%) saturate(0%) hue-rotate(293deg)
+    brightness(90%) contrast(86%);
+  --svg-black: invert(0%) sepia(0%) saturate(19%) hue-rotate(312deg)
+    brightness(98%) contrast(105%);
 }
 
 body {
