--- a/src/components/abstract/abstract-puzzle/abstract-puzzle.css
+++ b/src/components/abstract/abstract-puzzle/abstract-puzzle.css
@@ -1,2 +1,15 @@
-.component-name {
+.abstract-puzzle {
+  .puzzle-header {
+    display: flex;
+    margin: 1rem;
+
+    .puzzle-name {
+      flex-grow: 1;
+      align-content: center;
+    }
+
+    .puzzle-actions {
+      writing-mode: vertical-lr; /* center Button */
+    }
+  }
 }
