puzzle edit tab

--- a/src/components/abstract/abstract-puzzle/abstract-puzzle.css
+++ b/src/components/abstract/abstract-puzzle/abstract-puzzle.css
@@ -9,7 +9,12 @@
     }
 
     .puzzle-actions {
-      writing-mode: vertical-lr; /* center Button */
+      display: flex;
+      align-items: center;
+
+      .img-button {
+        margin-left: 1rem;
+      }
     }
   }
 }
