--- a/src/components/puzzle/t9/t9.css
+++ b/src/components/puzzle/t9/t9.css
@@ -9,7 +9,7 @@
 
     width: var(--cube-size);
     height: var(--cube-size);
-    border: 4px solid rgba(0, 0, 0, 0.2);
+    border: var(--standard-border);
     border-radius: 8px;
 
     margin: 1rem 0;
