--- a/src/components/ui/tab-manager/tab-manager.css
+++ b/src/components/ui/tab-manager/tab-manager.css
@@ -15,7 +15,7 @@
     padding: 0 0.3rem;
 
     border-radius: 8px 8px 0 0;
-    border: 4px solid rgba(0, 0, 0, 0.2);
+    border: var(--standard-border);
     border-bottom: none;
     border-collapse: collapse;
 
