--- a/src/components/puzzle/puzzle-edit/puzzle-edit.css
+++ b/src/components/puzzle/puzzle-edit/puzzle-edit.css
@@ -3,18 +3,32 @@
 
   table {
     border-collapse: collapse;
+    table-layout: fixed;
+    width: 100%;
   }
 
   thead {
     border-bottom: var(--standard-border);
   }
 
+  th {
+    text-align: left;
+  }
+
   tr:nth-child(2n) {
     background-color: rgba(0, 0, 0, 0.2);
   }
 
-  .table-load,
-  .table-edit {
+  .th-type {
+    width: 3rem;
+  }
+
+  .th-icon {
+    visibility: collapse;
+    width: 1.5rem;
+  }
+
+  .table-icon {
     text-align: center;
 
     .img-button {
