--- a/src/components/puzzle/cube-device/cube-device.css
+++ b/src/components/puzzle/cube-device/cube-device.css
@@ -70,6 +70,7 @@
       margin-top: 1rem;
 
       .multiline-edit-lable {
+        display: flex;
       }
 
       .multiline-edit-edit {
@@ -85,6 +86,18 @@
     .symbol-type-edit {
       label {
         width: 7rem;
+      }
+    }
+
+    .start-positions-lable {
+      .tooltip {
+        margin-left: 1rem;
+      }
+
+      .img-button {
+        width: 1.2rem;
+        height: 1.2rem;
+        margin-top: 3px;
       }
     }
 
